--- a/src/stylle.css
+++ b/src/stylle.css
@@ -83,8 +83,10 @@
   /* Location, Phone, Email Section */
   .contact-list {
     list-style-type: none;
+    text-align: center;
     margin-left: 30px;
-    padding-right: 20px;
+    padding-right: 30px;
+    margin-bottom: 50px;
   }
   
   .list-item {
@@ -125,6 +127,7 @@
   
   /* Social Media Icons */
   .social-media-list {
+
     position: relative;
     font-size: 22px;
     text-align: center;
